@@ -1,0 +1,50 @@
+[interface]
+classification = alignment
+
+[parameters]
+;; Any configuration options to be supplied to nucmer
+$;CONFIG_OPTIONS$; =
+
+[input]
+$;INPUT_FILE_LIST$; =
+$;INPUT_FILE$; =
+$;INPUT_DIRECTORY$; =
+;; the following is only used when iterating over an INPUT_DIRECTORY
+$;INPUT_EXTENSION$; = fsa
+;; The genome to be aligned against.
+$;REFERENCE_GENOME$; =
+;; Alternatively a list of reference genomes can be supplied. Each genome will be aligned against each input
+$;REFERENCE_GENOME_LIST$; =
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;NUCMER_DELTA_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.delta.list
+
+[component]
+$;COMPONENT_NAME$; = nucmer
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = $Name$
+$;RELEASE_TAG$; = $Name$
+$;REVISION$;            = $Revision: 5801 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+$;ITERATOR1$; = i1
+$;ITERATOR1_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.$;ITERATOR1$;.xml
+
+;Distributed options
+$;GROUP_COUNT$; = 150
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; =
+$;COMPONENT_XML$; =
+$;PIPELINE_XML$; =
+$;PIPELINEID$; =
+
+[include]
+$;PROJECT_CONFIG$;=
