@@ -1,0 +1,52 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+        <state>incomplete</state>
+        <name>nucmer workflow</name>
+        <!--Preprocessing-->
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create output directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+        </command>
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create temp directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;TMP_DIR$;</arg>
+        </command>
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create nucmer iterator list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_nucmer_iterator_list</executable>
+            <arg>--sequence_file=$;INPUT_FILE$; --sequence_list=$;INPUT_FILE_LIST$; --reference_genome=$;REFERENCE_GENOME$; --reference_genome_list=$;REFERENCE_GENOME_LIST$; --output=$;TMP_DIR$;/nucmer_iterator.list --log=$;TMP_DIR$;/create_nucmer_iterator_list.log --debug=4</arg>
+        </command>
+        <!--Processing-->
+        <!--Iterator-->
+        <INCLUDE file="$;DOCS_DIR$;/iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML,$;ITERATOR_LIST$;=$;TMP_DIR$;/nucmer_iterator.list" />
+        <!--Postprocessing-->
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create nucmer delta file list</name>
+			<state>incomplete</state>
+			<executable>$;BIN_DIR$;/create_list_file</executable>
+			<param>
+				<key>--directory</key>
+				<value>$;OUTPUT_DIRECTORY$;</value>
+			</param>
+			<param>
+				<key>--regex</key>
+				<value>".*\.delta"</value>
+			</param>					
+			<param>
+				<key>--output_list</key>
+				<value>$;NUCMER_DELTA_LIST$;</value>
+			</param>		    
+		</command>
+	</commandSet>
+</commandSetRoot>
